Add hover effect and css effects
- Added mouse hover effect when curser is over divs
inside the sketch box
- Changed color theme of page.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
         </head>
         <body>
             <h1>Etch-A-Sketch</h1>
-            <button id="changeGrid">Change Grid Size</button>
-            <button id="resetGrid">Reset Grid</button>
+            <p>Welcome to Etch-A-Sketch! Click new sketch to get started.
+                 For the most detail, enter a large number between 1 and 100.
+            </p>
+            <div class="buttons">
+            <button id="createGrid">New Sketch</button>
+            <button id="resetGrid">Clear Sketch</button>
+            </div>
             <div class="gridContainer" id="grid">
             </div>
-
         </body>
     </html>
