Edit JS hover effect
Created new JS color effect for when mouse moves
over the grid squares.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
         </head>
         <body>
             <h1>Etch-A-Sketch</h1>
-            <p>Welcome to Etch-A-Sketch! Click new sketch to get started.
-                 For the most detail, enter a large number between 1 and 100.
+            <p>Welcome to Etch-A-Sketch! Use the mouse to start drawing.
             </p>
             <div class="buttons">
-            <button id="createGrid">New Sketch</button>
+            <button id="createGrid">Brush Size</button>
             <button id="resetGrid">Clear Sketch</button>
             </div>
             <div class="gridContainer" id="grid">
